feat: command modules and code block formatting